; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_lg-laptop.c_wmi_input_destroy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_lg-laptop.c_wmi_input_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@inited = common dso_local global i32 0, align 4
@INIT_INPUT_WMI_2 = common dso_local global i32 0, align 4
@WMI_EVENT_GUID2 = common dso_local global i32 0, align 4
@INIT_INPUT_WMI_0 = common dso_local global i32 0, align 4
@WMI_EVENT_GUID0 = common dso_local global i32 0, align 4
@INIT_SPARSE_KEYMAP = common dso_local global i32 0, align 4
@wmi_input_dev = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @wmi_input_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wmi_input_destroy() #0 {
  %1 = load i32, i32* @inited, align 4
  %2 = load i32, i32* @INIT_INPUT_WMI_2, align 4
  %3 = and i32 %1, %2
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* @WMI_EVENT_GUID2, align 4
  %7 = call i32 @wmi_remove_notify_handler(i32 %6)
  br label %8

8:                                                ; preds = %5, %0
  %9 = load i32, i32* @inited, align 4
  %10 = load i32, i32* @INIT_INPUT_WMI_0, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %8
  %14 = load i32, i32* @WMI_EVENT_GUID0, align 4
  %15 = call i32 @wmi_remove_notify_handler(i32 %14)
  br label %16

16:                                               ; preds = %13, %8
  %17 = load i32, i32* @inited, align 4
  %18 = load i32, i32* @INIT_SPARSE_KEYMAP, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %16
  %22 = load i32, i32* @wmi_input_dev, align 4
  %23 = call i32 @input_unregister_device(i32 %22)
  br label %24

24:                                               ; preds = %21, %16
  %25 = load i32, i32* @INIT_INPUT_WMI_0, align 4
  %26 = load i32, i32* @INIT_INPUT_WMI_2, align 4
  %27 = or i32 %25, %26
  %28 = load i32, i32* @INIT_SPARSE_KEYMAP, align 4
  %29 = or i32 %27, %28
  %30 = xor i32 %29, -1
  %31 = load i32, i32* @inited, align 4
  %32 = and i32 %31, %30
  store i32 %32, i32* @inited, align 4
  ret void
}

declare dso_local i32 @wmi_remove_notify_handler(i32) #1

declare dso_local i32 @input_unregister_device(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
